--- a/index.html
+++ b/index.html
@@ -76,7 +76,28 @@
             </div>
         </aside>
         <main class="chat-container">
-
+            <nav class="chat-navbar">
+                <div class="contactinfo-container">
+                    <img class="user-photo" src="img/avatar2.png" alt="">
+                    <p class="user-name">Sabrina Matos</p>
+                </div>
+                <ul class="chattolls-container">
+                  <li><i class="fas fa-search"></i></li>
+                  <li><i class="fas fa-paperclip"></i></li>
+                  <li><i class="fas fa-ellipsis-v"></i></li> 
+                </ul>
+            </nav>
+            <div class="messags-container">
+                <div class="big-image"></div>
+                <div class="chat-message"></div>
+                <p class="guest-mwessage">Olá bom dia</p>
+                <p class="user-mwessage">Oi, tudo bem?</p>
+            </div>
+            <div class="sendmessage-container">
+                <i class="far fa-grin"></i>
+                <input type="text" name="message" class="userinput" placeholder="Digite uma mensagem">
+                <i class="fas fa-microphone"></i>
+            </div>
         </main>
     </div>
 </body>
