--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
                 </ul>
             </nav>
             <div class="messags-container">
-                <div class="big-image"></div>
-                <div class="chat-message"></div>
-                <p class="guest-mwessage">Olá bom dia</p>
-                <p class="user-mwessage">Oi, tudo bem?</p>
+                <div class="bg-image"></div>
+                <div class="chat-messages"></div>
+                <p class="guest-message">Olá bom dia</p>
+                <p class="user-message">Oi, tudo bem?</p>
             </div>
             <div class="sendmessage-container">
                 <i class="far fa-grin"></i>
