--- a/index.html
+++ b/index.html
@@ -29,44 +29,46 @@
                 <i class="fas fa-bell-slash"></i>
                 <p class="receive-notification">Receba notificações de novas mensagens</p>
                 <p class="activate-notification">Ativar notificações na área de trabalho
-                    <i class="fas fa-angle-rught"></i>
+                    <i class="fas fa-angle-right"></i>
                 </p>
             </div>
             <div class="search-container">
-                <i id="contact-search"></i>
+                <i id="contact-search" class="fas fa-search"></i>
                 <input type="text" name="search" id="search" placeholder="Procurar ou começar uma nova conversa">
             </div>
             <div class="contacts- container">
-                <div class="contact-box">
+                <div class="contact-box active-chat">
                     <img class="user-photo" src="img/avatar2.png" alt="">
                     <div class="user-info">
                         <p class="user-name">Sabrina Matos</p>
                         <p class="user-messagepreview">
-                        <i class="fas fa-check-double"></i>Oi, tudo bem ?
-                    </p>
+                            <i class="fas fa-check-double"></i>Oi, tudo bem ?
+                        </p>
                     </div>
                     <div class="message-info">
                         <p class="message-time">22:40</p>
                     </div>
                 </div>
-                
-                <div class="contact-box">
+
+                <div class="contact-box contact-box1">
                     <img class="user-photo" src="img/avatar3.png" alt="">
                     <div class="user-info">
                         <p class="user-name">João Augusto</p>
-                        <p class="user-messagepreview">Oi, Tudo bem?</p>
+                        <p class="user-messagepreview">Está disponível para um freela</p>
                     </div>
                     <div class="message-info">
                         <p class="message-time">12:30</p>
                         <p class="message-pending">3</p>
                     </div>
                 </div>
-                
-                <div class="contact-box">
+
+                <div class="contact-box contact-box1">
                     <img class="user-photo" src="img/avatar4.png" alt="">
                     <div class="user-info">
-                        <p class="user-name"></p>
-                        <p class="user-messagepreview">O projeto ficou perfeito, obrigada!</p>
+                        <p class="user-name">Maria Silva</p>
+                        <p class="user-messagepreview">
+                            O projeto ficou perfeito, obrigada!
+                        </p>
                     </div>
                     <div class="message-info">
                         <p class="message-time">08:20</p>
@@ -82,12 +84,12 @@
                     <p class="user-name">Sabrina Matos</p>
                 </div>
                 <ul class="chattolls-container">
-                  <li><i class="fas fa-search"></i></li>
-                  <li><i class="fas fa-paperclip"></i></li>
-                  <li><i class="fas fa-ellipsis-v"></i></li> 
+                    <li><i class="fas fa-search"></i></li>
+                    <li><i class="fas fa-paperclip"></i></li>
+                    <li><i class="fas fa-ellipsis-v"></i></li>
                 </ul>
             </nav>
-            <div class="messags-container">
+            <div class="messages-container">
                 <div class="bg-image"></div>
                 <div class="chat-messages"></div>
                 <p class="guest-message">Olá bom dia</p>
@@ -95,7 +97,7 @@
             </div>
             <div class="sendmessage-container">
                 <i class="far fa-grin"></i>
-                <input type="text" name="message" class="userinput" placeholder="Digite uma mensagem">
+                <input id="chatmessage" type="text" name="message" class="userinput" placeholder="Digite uma mensagem">
                 <i class="fas fa-microphone"></i>
             </div>
         </main>
