--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@
             </nav>
             <div class="messages-container">
                 <div class="bg-image"></div>
-                <div class="chat-messages"></div>
-                <p class="guest-message">Olá bom dia</p>
-                <p class="user-message">Oi, tudo bem?</p>
+                <div class="chat-messages">
+                    <p class="guest-message">Olá bom dia</p>
+                    <p class="user-message">Oi, tudo bem?</p>
+                </div>
             </div>
             <div class="sendmessage-container">
                 <i class="far fa-grin"></i>
